Replace WebClient with Spring Cloud OpenFeign for Enigio API
3 declarative Feign client interfaces:
- EnigioDocumentClient: create, amend, invalidate, validate, get metadata
- EnigioSignatureClient: add signers, send emails, poll status, webhooks
- EnigioEnvelopeClient: draft, seal, upload, transfer, cancel

Typed request/response DTOs with Jakarta Bean Validation annotations
(@NotBlank, @NotNull, @NotEmpty, @Email) matching Enigio API v3.3 spec.

EnigioClient facade delegates to Feign clients — domain-to-vendor
translation only, zero HTTP boilerplate.

Removed spring-boot-starter-webflux dependency (was only used for
WebClient.block() anti-pattern on Tomcat). Feign is natively synchronous
and works naturally with Java 21 virtual threads.

Timeouts configured in application.yml:
  vendor.enigio.connect-timeout-ms: 5000
  vendor.enigio.read-timeout-ms: 30000
  spring.cloud.openfeign.client.config.default.*

94/94 tests pass.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>